appId: "com.example.weatherapp"
---
- launchApp
- tapOn:
    id: "listItem-0"
- assertVisible: "Paris"
- assertVisible: "Pressure:"
- tapOn: "Weather"
- assertVisible: "Notify me!"
- scrollUntilVisible:
      element:
          id: "listItem-15"
      direction: DOWN
- assertVisible: "Luxor"
- assertVisible: "Buenos Aires"
- assertVisible: "Reykjavik"
